fix put entry I/F
