# server/api/go/model_entry_request.go
@@ -9,7 +9,7 @@
 
 package openapi
 
-type PostEntryRequest struct {
+type EntryRequest struct {
 
 	ContestId string `json:"contestId"`
 
